Fixes to letter-spacing and `<Steps>`

--- a/globals/typography.css
+++ b/globals/typography.css
@@ -43,7 +43,7 @@
   --letter-spacing-large-iii: 0.01875rem;
   --letter-spacing-large-ii: 0.01875rem;
   --letter-spacing-large-i: 0.0125rem;
-  --letter-spacing-regular: 0.10625rem;
+  --letter-spacing-regular: 0.010625rem;
   --letter-spacing-small-i: 0.009375rem;
   --letter-spacing-small-ii: 0.009375rem;
 
